--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -1,13 +1,31 @@
-{% block content %}
-    <div class="products-description">
-        <p>Products</p>
-    </div>
-
-    {% for a in products %}
-        <div class="products-content">
-            <p>{{ a.product_category }}</p>
-            <p>{{ a.name }}</p>
-            <p>{{ a.description }}</p>
+{% extends 'base.html' %}
+{% block title %} List of products {% endblock %}
+{% block main %}
+<div class="row">
+  {% for a in products %}
+  <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+    <div class="card">
+      <img class="card-img" src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/vans.png"
+        alt="Vans">
+      <div class="card-img-overlay d-flex justify-content-end">
+        <a href="#" class="card-link text-danger like">
+          <i class="fas fa-heart"></i>
+        </a>
+      </div>
+      <div class="card-body">
+        <h4 class="card-title">{{ a.name }}</h4>
+        <h6 class="card-subtitle mb-2 text-muted">Category: {{ a.product_category }}</h6>
+        <p class="card-text">
+            {{ a.description}} </p>
+        <div class="buy d-flex justify-content-between align-items-center">
+          <div class="price text-success">
+            <h5 class="mt-4">{{ a.price }}</h5>
+          </div>
+          <a href="#" class="btn btn-danger mt-3"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
         </div>
-    {% endfor %}
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
 {% endblock %}
