--- a/templates/index.html
+++ b/templates/index.html
@@ -33,4 +33,10 @@
     </div>
     {% endfor %}
   </div>
+    <form action="" method="get">
+          <div class="form-group">
+              {{ form.as_p }}
+              <input type="submit" value="Search">
+          </div>
+    </form>
 {% endblock %}
